--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,26 @@ body {
 div {
     border: 1px solid chocolate;
 }
+/* Box-sizing */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+  }
 
+/* Base styles */
+
+body {
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+
+.content {
+    width: 970px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 /* Navigation Section */
 
 .top-navigation {
@@ -14,12 +33,33 @@ div {
 }
 
 .top-navigation > .content {
-    width: 970px;
     height: 70px;
-    margin: 0 auto;
 }
 
 .logo {
     height: 70px;
-    margin-left: 14px;
 }
+
+.top-navigation .links {
+    float: right;
+    font-size: 16px;
+    color: #838994;
+    letter-spacing: 0.03em;
+    margin-top: 25px;
+}
+
+.top-navigation .links li {
+    display: inline-block;
+    margin-left: 25px;
+}
+
+.top-navigation .links .active {
+    color: #4c5058;
+    font-weight: 500;
+}
+
+.top-navigation .links li:hover {
+    cursor: pointer;
+    color: #333;
+}
+
