--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,12 @@ body {
     color: #333;
 }
 
+/* Introduction Section */
+
+.introduction {
+    background-image: url('../images/first-background.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45.938rem;
+}
