--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,30 @@ body {
     border-color: #cf3d0e;
     cursor: pointer;
 }
+
+/* Three Icon Section */
+
+.cases .content {
+    margin-top: 7.875rem;
+    text-align: center;
+    color: #1d1e21;
+}
+
+.cases h2 {
+    font-size: 2.75rem;
+    font-weight: 300;
+    margin: 1.625rem 0 3.125rem;
+}
+
+.cases .devices {
+    width: 33.333%;
+    display: inline-block;
+    margin-right: -4px;
+}
+
+.cases .devices h3 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0 1.875rem;
+}
+
