--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,15 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
+
 /* Navigation Section */
 
 .top-navigation {
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
     background-color: #fff;
+    border-bottom: 1px solid #ddd;
 }
 
 .top-navigation > .content {
@@ -117,6 +122,7 @@ body {
     margin-top: 7.875rem;
     text-align: center;
     color: #1d1e21;
+    padding-bottom: 5rem;
 }
 
 .cases h2 {
