--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 /*reference styles*/
 body {
     background-color: lightgrey;
@@ -143,3 +146,52 @@ body {
     margin: 2.5rem 0 1.875rem;
 }
 
+/* Footer section */
+
+.social .content {
+    text-align: center;
+    padding-bottom: 9.375rem;
+    border-top: 1px solid #eaebec;
+}
+
+.social h4 {
+    font-weight: 400;
+}
+
+.copyright {
+    font-weight: 300;
+    color: #838994;
+}
+
+.icons {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.social .icons li {
+    display: inline-block;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: 1px solid #eaebec;
+    border-radius: 50%;
+    text-align: center;
+    padding: 0.625rem 0;
+    margin: 0.25rem 5px;
+}
+
+.social .icons li:hover {
+    cursor: pointer;
+}
+
+.twitter {
+    color: #55acee;
+}
+
+.facebook {
+    color: #4c66a4;
+}
+
+.instagram {
+    color: #3f729b;
+}
