--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
 
 
-
 /*reference styles*/
 body {
     background-color: lightgrey;
+    /*font-size: 1.1em;
+    line-height: 1.5;*/
 }
 
 div {
     border: 1px solid chocolate;
 }
+
+/* Clearfix */
+.group::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 /* Box-sizing */
 html {
   box-sizing: border-box;
@@ -28,6 +37,12 @@ body {
     width: 970px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 /* Navigation Section */
@@ -50,7 +65,6 @@ body {
 
 .top-navigation .links {
     float: right;
-    font-size: 16px;
     color: #838994;
     letter-spacing: 0.03em;
     margin-top: 25px;
@@ -59,6 +73,7 @@ body {
 .top-navigation .links li {
     display: inline-block;
     margin-left: 25px;
+    font-size: 16px;
 }
 
 .top-navigation .links .active {
@@ -146,6 +161,11 @@ body {
     margin: 2.5rem 0 1.875rem;
 }
 
+.devices img {
+    width: 127px;
+    height: 127px;
+}
+
 /* Footer section */
 
 .social .content {
@@ -161,12 +181,6 @@ body {
 .copyright {
     font-weight: 300;
     color: #838994;
-}
-
-.icons {
-    list-style: none;
-    margin: 0;
-    padding: 0;
 }
 
 .social .icons li {
