--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ ul {
 
 .logo {
     height: 70px;
+    width: 26px;
 }
 
 .links {
@@ -105,6 +106,7 @@ ul {
     color: #fff;
     text-align: center;
     font-weight: 300;
+    letter-spacing: 0.03em;
 }
 
 .introduction h1 {
